# Flowtrace

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/flowtrace-cli/: Cargo.toml  build.rs
crates/flowtrace-cli/src/: debug_watch.rs  explain.rs  format_dag.rs  git.rs  id.rs  main.rs  reply.rs
crates/flowtrace-cli/src/serve/: classify.rs  embed.rs  error.rs  events.rs  mod.rs  scope.rs  state.rs  watcher.rs
crates/flowtrace-cli/src/serve/routes/: assets.rs  commits.rs  config.rs  events.rs  mod.rs  reply.rs  runs.rs  traces.rs
crates/flowtrace-core/: Cargo.toml
crates/flowtrace-core/src/: error.rs  io.rs  lib.rs  output.rs  paths.rs  schema.rs  state.rs  validate.rs
docs/: EXAMPLES.md  EXAMPLES.zh-CN.md  README.en.md  README.zh-CN.md
docs/trace/: ARCHITECTURE.md  CLI.md  FIELDS.md  PHILOSOPHY.md  README.md  REFERENCE-TRACES.md  SCHEMA.md
frontend/: .gitignore  components.json  index.html  knip.json  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: screenshot-wechat-preview.mjs  sync-types.sh
frontend/src/: App.tsx  main.tsx
frontend/src/app/: globals.css
frontend/src/app/styles/: base.css  tokens.css
frontend/src/app/traces/: page.tsx
frontend/src/i18n/: init.ts
frontend/src/messages/en/: common.json  dashboard.json  navigation.json  trace.json
frontend/src/messages/es/: common.json  dashboard.json  navigation.json  trace.json
frontend/src/messages/ko/: common.json  dashboard.json  navigation.json  trace.json
frontend/src/messages/zh-CN/: common.json  dashboard.json  navigation.json  trace.json
frontend/src/shared/components/: EnhancedMarkdown.tsx  ErrorBoundary.tsx  ErrorState.tsx  PageLoading.tsx
frontend/src/shared/lib/: api-client.ts  api-url.ts  citation-resolver.ts  date-utils.ts  errors.ts  logger.ts  sse-client.ts
scripts/: _find_flowtrace_bin.sh  cli-smoke.sh  cli-stress.sh  demo-dream-animate.sh  demo-dream-replies.sh  install.sh
scripts/examples/: _lib.sh  regenerate-all.sh
scripts/examples/distill-mind/: build.sh
scripts/examples/dream-analysis/: build.sh
scripts/examples/iris-analysis/: build.sh
scripts/examples/minimal/: build.sh
scripts/examples/nested-deps/: build.sh
scripts/examples/nvda-decision/: build.sh
scripts/examples/paid-ads/: build.sh
scripts/examples/research-writer/: build.sh
scripts/examples/saas-dd/: build.sh
scripts/examples/security-cicd/: build.sh
scripts/examples/spring-demo/: build.sh
scripts/examples/swe-bugfix/: build.sh
scripts/examples/tailored-resume/: build.sh
scripts/examples/talk-to-deck/: build.sh
skills/make-trace/: SKILL.md
skills/make-trace/references/: CLI.md  WINDOWS.md
(+442 files in other folders)
