[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Flowtrace Authors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
notify = "8"
notify-debouncer-full = "0.6"
rust-embed = { version = "8", features = ["mime-guess", "include-exclude"] }
mime_guess = "2"
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
similar = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
