[package]
name = "flowtrace-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowtrace"
path = "src/main.rs"

[dependencies]
flowtrace-core = { path = "../flowtrace-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
similar = { workspace = true }
zip = { workspace = true }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
fs2 = "0.4"
schemars = { version = "0.8", features = ["chrono", "preserve_order"] }
lru = "0.18.0"

[dev-dependencies]
tempfile = "3"
