[package]
name = "flowtrace-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
unicode-normalization = "0.1"
schemars = { version = "0.8", features = ["chrono", "preserve_order"] }
